...
                android:layout_width = "70dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_person_search_24"
                android:backgroundTint="@color/teal_200"
                android:layout_marginLeft="5dp"/>
            <Button
                android:id="@+id/businessDeleteNAVBtn"
                android:layout_width = "70dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_swap_horizontal_circle_24"
                android:backgroundTint="#FFE50000"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
...
